--- a/notebooks/MEME-Generator.ipynb
+++ b/notebooks/MEME-Generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category = 'entertainment'"
+    "category = 'entertainment'\n",
+    "country = 'in'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(\"http://newsapi.org/v2/top-headlines?country=in&category=\"+category+\"&apiKey=469e3b5dc7b44bf6ae90867fe0e8fd5c\")"
+    "response = requests.get(\"http://newsapi.org/v2/top-headlines?country=\"+country+\"&category=\"+category+\"&apiKey=469e3b5dc7b44bf6ae90867fe0e8fd5c\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,17 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anger: 0.13067813\n",
-      "fear: 0.7585651\n",
-      "joy: 0.021767307\n",
-      "sadness: 0.08898952\n"
+      "anger: 0.13135451\n",
+      "fear: 0.75693786\n",
+      "joy: 0.022167336\n",
+      "sadness: 0.08954038\n"
      ]
     }
    ],
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +333,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generateFinalOutput(videoClip,text, dialog):\n",
+    "    clip = VideoFileClip(videoClip)  \n",
+    "    text = insert_newlines(text)\n",
+    "    dialog = insert_newlines(dialog)\n",
+    "    time = clip.duration\n",
+    "    txt_clip = TextClip(text, fontsize = 22, color = 'white') \n",
+    "    txt_clip2 = TextClip(dialog, fontsize = 15, color = 'yellow')\n",
+    "    txt_clip = txt_clip.set_pos('top').set_duration(time) \n",
+    "    txt_clip2 = txt_clip2.set_pos('bottom').set_duration(time) \n",
+    "    video = CompositeVideoClip([clip, txt_clip,txt_clip2])  \n",
+    "    video.write_videofile('Meme_'+videoClip[:8] + text[:8]+ '.mp4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +397,7 @@
     "        disp = articles[news_line]['title'] + \" : \" + dialogs[j]\n",
     "        print(articles[news_line]['title'] + \" : \" + dialogs[j] )\n",
     "        text = insert_newlines(disp,40)\n",
-    "        generateResult(dialogs[j][:8] + '.mp4', articles[news_line]['title'], dialogs[j] )\n",
+    "        generateFinalOutput(dialogs[j][:8] + '.mp4', articles[news_line]['title'], dialogs[j] )\n",
     "        pairs[j] = news_line\n",
     "    \n",
     "    #print(\"Final Output --> \"+ news[pairs[movie_line]] + \" : \" + dialogs[movie_line])\n"
@@ -385,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -396,57 +416,414 @@
       "fear: 0.75031745\n",
       "joy: 0.020764206\n",
       "sadness: 0.0966099\n",
-      "Kangana Ranaut’s first director Anurag Basu claims he doesn’t understand her ‘public persona’ - Times of India : There was an idea, to bring together a group of remarkable people, to see if we could become something more\n",
+      "Bigg Boss 14: After Vikas Gupta talks about his ex, Priyank Sharma; fans speculate that he's been paid Rs. 15 - Bollywood Life : There was an idea, to bring together a group of remarkable people, to see if we could become something more\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   4%|▍         | 15/343 [00:00<00:02, 148.58it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_There waBigg Bos.mp4.\n",
+      "MoviePy - Writing audio in Meme_There waBigg BosTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   3%|▎         | 12/373 [00:00<00:03, 114.12it/s, now=None]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_There waBigg Bos.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_There waBigg Bos.mp4\n",
       "anger: 0.13240752\n",
       "fear: 0.75724274\n",
       "joy: 0.022118635\n",
       "sadness: 0.08823136\n",
-      "'Get well soon, Soorya': Mammootty wishes ‘Thalapathi’ Rajini a speedy recovery - The News Minute : So when they needed us we could fight the battles that they never could\n",
+      "Parvathy-starrer Varthamanam, set in JNU, rejected by Kerala censor board - The Indian Express : So when they needed us we could fight the battles that they never could\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   1%|          | 2/208 [00:00<00:13, 15.69it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_So when Parvathy.mp4.\n",
+      "MoviePy - Writing audio in Meme_So when ParvathyTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   5%|▍         | 11/227 [00:00<00:02, 104.50it/s, now=None]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_So when Parvathy.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_So when Parvathy.mp4\n",
       "anger: 0.13177775\n",
       "fear: 0.7610933\n",
       "joy: 0.022968303\n",
       "sadness: 0.0841608\n",
-      "Celebrate Christmas With Alia Bhatt: Have A Look How It's Done - IWMBuzz : In time, you'll know what it's like to lose\n",
+      "Parvathy-starrer Varthamanam, set in JNU, rejected by Kerala censor board - The Indian Express : In time, you'll know what it's like to lose\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:  23%|██▎       | 28/122 [00:00<00:00, 216.45it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_In time,Parvathy.mp4.\n",
+      "MoviePy - Writing audio in Meme_In time,ParvathyTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   2%|▏         | 2/133 [00:00<00:07, 18.33it/s, now=None]       "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_In time,Parvathy.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_In time,Parvathy.mp4\n",
       "anger: 0.13157234\n",
       "fear: 0.7553917\n",
       "joy: 0.021886934\n",
       "sadness: 0.09114935\n",
-      "See Pic: ‘Cheers to the last weekend of the year’, Priyanka Chopra bids adieu to 2020 - Times of India : To feel so desperately that you're right, that to fail all the same\n",
+      "Som Sekhar's most loved companion passes away suddenly- heart touching video - Tamil News - IndiaGlitz.com : To feel so desperately that you're right, that to fail all the same\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   7%|▋         | 10/150 [00:00<00:01, 99.32it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_To feel Som Sekh.mp4.\n",
+      "MoviePy - Writing audio in Meme_To feel Som SekhTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   1%|          | 2/164 [00:00<00:09, 17.46it/s, now=None]      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_To feel Som Sekh.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_To feel Som Sekh.mp4\n",
       "anger: 0.13294794\n",
       "fear: 0.75034225\n",
       "joy: 0.020553686\n",
       "sadness: 0.096156076\n",
-      "Kangana Ranaut’s first director Anurag Basu claims he doesn’t understand her ‘public persona’ - Times of India : Dread it, Run from it\n",
+      "Ayushmann Khurrana is spending sunny winter days with kisses from wife Tahira Kashyap, plays cricket... - Hindustan Times : Dread it, Run from it\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   2%|▏         | 2/124 [00:00<00:10, 12.11it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_Dread itAyushman.mp4.\n",
+      "MoviePy - Writing audio in Meme_Dread itAyushmanTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   1%|▏         | 2/135 [00:00<00:10, 12.90it/s, now=None]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_Dread itAyushman.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_Dread itAyushman.mp4\n",
       "anger: 0.13421217\n",
       "fear: 0.7557998\n",
       "joy: 0.021604886\n",
       "sadness: 0.08838318\n",
-      "Harsh Varrdhan Kapoor clarifies diss against Vikramaditya Motwane, Bhavesh Joshi in AK vs AK: ‘I’m not... - Hindustan Times : Destiny still arrives\n",
+      "Amitabh Bachchan apologises to fan for using her poem without due credit: Latter says want your love not sorry - PINKVILLA : Destiny still arrives\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   2%|▏         | 2/96 [00:00<00:07, 12.89it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_Destiny Amitabh .mp4.\n",
+      "MoviePy - Writing audio in Meme_Destiny Amitabh TEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   2%|▏         | 2/105 [00:00<00:06, 16.93it/s, now=None]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_Destiny Amitabh .mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_Destiny Amitabh .mp4\n",
       "anger: 0.1333073\n",
       "fear: 0.75831497\n",
       "joy: 0.022379177\n",
       "sadness: 0.08599846\n",
-      "'Get well soon, Soorya': Mammootty wishes ‘Thalapathi’ Rajini a speedy recovery - The News Minute : Evacuate the city\n",
+      "Parvathy-starrer Varthamanam, set in JNU, rejected by Kerala censor board - The Indian Express : Evacuate the city\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   3%|▎         | 2/76 [00:00<00:03, 18.79it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_EvacuateParvathy.mp4.\n",
+      "MoviePy - Writing audio in Meme_EvacuateParvathyTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   2%|▏         | 2/82 [00:00<00:04, 19.36it/s, now=None]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_EvacuateParvathy.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                            \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_EvacuateParvathy.mp4\n",
       "anger: 0.1350403\n",
       "fear: 0.7442698\n",
       "joy: 0.020878615\n",
       "sadness: 0.09981136\n",
-      "Watch Video: Kangana Ranaut urges ‘don't immerse my ashes in Ganga’ in latest poem - Times of India : Engage all defences and get this man a shield\n",
+      "Gauahar Khan, Zaid Darbar Get Grand Welcome as Family Members Sing 'Tu Jo Mila,' Watch Video - News18 : Engage all defences and get this man a shield\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:  19%|█▉        | 27/142 [00:00<00:00, 269.86it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_Engage aGauahar .mp4.\n",
+      "MoviePy - Writing audio in Meme_Engage aGauahar TEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   1%|▏         | 2/154 [00:00<00:08, 17.68it/s, now=None]       "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_Engage aGauahar .mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_Engage aGauahar .mp4\n",
       "anger: 0.1340147\n",
       "fear: 0.75192827\n",
       "joy: 0.021538613\n",
-      "sadness: 0.092518605\n",
-      "On Navya Nanda's Post, Rumoured Boyfriend Meezaan Jaaferi Left This Comment - NDTV : Fun isn't something one considers the balance in the universe\n",
-      "anger: 0.13067813\n",
-      "fear: 0.7585651\n",
-      "joy: 0.021767307\n",
-      "sadness: 0.08898952\n",
-      "'Get well soon, Soorya': Mammootty wishes ‘Thalapathi’ Rajini a speedy recovery - The News Minute : But this does put a smile on my face\n",
-      "anger: 0.13135451\n",
-      "fear: 0.75693786\n",
-      "joy: 0.022167336\n",
-      "sadness: 0.08954038\n",
-      "'Get well soon, Soorya': Mammootty wishes ‘Thalapathi’ Rajini a speedy recovery - The News Minute : Who the hell are you guys?\n"
+      "sadness: 0.092518605\n"
      ]
     }
    ],
