Updated paths for direct output

--- a/notebooks/MEME-Generator.ipynb
+++ b/notebooks/MEME-Generator.ipynb
@@ -82,7 +82,7 @@
     "sys.path.append(Path(os.path.join(os.path.abspath(''), '../')).resolve().as_posix())\n",
     "import pickle\n",
     "\n",
-    "tokenizer_path = Path('../datasets/sentiment_analysis/tokenizer.pickle').resolve()\n",
+    "tokenizer_path = Path('../datasets/tokenizer.pickle').resolve()\n",
     "with tokenizer_path.open('rb') as file:\n",
     "    tokenizer = pickle.load(file)\n",
     "\n",
@@ -126,12 +126,12 @@
     "\n",
     "model = Model(input_layer, output_layer)\n",
     "\n",
-    "model_weights_path = Path('../models/emotion_recognition/model_weights.h5').resolve()\n",
+    "model_weights_path = Path('../models/model_weights.h5').resolve()\n",
     "model.load_weights(model_weights_path.as_posix())\n",
     "\n",
     "import pandas as pd\n",
     "\n",
-    "encoder_path = Path('../models/emotion_recognition/encoder.pickle').resolve()\n",
+    "encoder_path = Path('../models/encoder.pickle').resolve()\n",
     "with encoder_path.open('rb') as file:\n",
     "    encoder = pickle.load(file)\n",
     "    \n",
