--- a/notebooks/MEME-Generator.ipynb
+++ b/notebooks/MEME-Generator.ipynb
@@ -82,7 +82,7 @@
     "sys.path.append(Path(os.path.join(os.path.abspath(''), '../')).resolve().as_posix())\n",
     "import pickle\n",
     "\n",
-    "tokenizer_path = Path('../datasets/tokenizer.pickle').resolve()\n",
+    "tokenizer_path = Path('../datasets/sentiment_analysis/tokenizer.pickle').resolve()\n",
     "with tokenizer_path.open('rb') as file:\n",
     "    tokenizer = pickle.load(file)\n",
     "\n",
@@ -126,12 +126,12 @@
     "\n",
     "model = Model(input_layer, output_layer)\n",
     "\n",
-    "model_weights_path = Path('../models/model_weights.h5').resolve()\n",
+    "model_weights_path = Path('../models/emotion_recognition/model_weights.h5').resolve()\n",
     "model.load_weights(model_weights_path.as_posix())\n",
     "\n",
     "import pandas as pd\n",
     "\n",
-    "encoder_path = Path('../models/encoder.pickle').resolve()\n",
+    "encoder_path = Path('../models/emotion_recognition/encoder.pickle').resolve()\n",
     "with encoder_path.open('rb') as file:\n",
     "    encoder = pickle.load(file)\n",
     "    \n",
@@ -400,12 +400,12 @@
     "        generateFinalOutput(dialogs[j][:8] + '.mp4', articles[news_line]['title'], dialogs[j] )\n",
     "        pairs[j] = news_line\n",
     "    \n",
-    "    #print(\"Final Output --> \"+ news[pairs[movie_line]] + \" : \" + dialogs[movie_line])\n"
+    "    print(\"Final Output --> \"+ news[pairs[movie_line]] + \" : \" + dialogs[movie_line])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,156 @@
       "anger: 0.1340147\n",
       "fear: 0.75192827\n",
       "joy: 0.021538613\n",
-      "sadness: 0.092518605\n"
+      "sadness: 0.092518605\n",
+      "Shoot of Dulquer Salmaan, Aditi Rao Hydari’s Hey Sinamika wrapped up, see pics - Hindustan Times : Fun isn't something one considers the balance in the universe\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:  14%|█▍        | 21/152 [00:00<00:00, 139.36it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_Fun isn'Shoot of.mp4.\n",
+      "MoviePy - Writing audio in Meme_Fun isn'Shoot ofTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   1%|          | 2/165 [00:00<00:08, 18.26it/s, now=None]      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_Fun isn'Shoot of.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_Fun isn'Shoot of.mp4\n",
+      "anger: 0.13067813\n",
+      "fear: 0.7585651\n",
+      "joy: 0.021767307\n",
+      "sadness: 0.08898952\n",
+      "Amitabh Bachchan apologises to fan for using her poem without due credit: Latter says want your love not sorry - PINKVILLA : But this does put a smile on my face\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   1%|          | 2/190 [00:00<00:10, 18.14it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_But thisAmitabh .mp4.\n",
+      "MoviePy - Writing audio in Meme_But thisAmitabh TEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   1%|          | 2/206 [00:00<00:11, 17.36it/s, now=None]      "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_But thisAmitabh .mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_But thisAmitabh .mp4\n",
+      "anger: 0.13135451\n",
+      "fear: 0.75693786\n",
+      "joy: 0.022167336\n",
+      "sadness: 0.08954038\n",
+      "Amitabh Bachchan apologises to fan for using her poem without due credit: Latter says want your love not sorry - PINKVILLA : Who the hell are you guys?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:  21%|██        | 21/99 [00:00<00:00, 209.86it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video Meme_Who the Amitabh .mp4.\n",
+      "MoviePy - Writing audio in Meme_Who the Amitabh TEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "t:   2%|▏         | 2/108 [00:00<00:06, 17.24it/s, now=None]     "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video Meme_Who the Amitabh .mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                              \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready Meme_Who the Amitabh .mp4\n"
      ]
     }
    ],
